# server/src/scimodom/api/project.py
@@ -10,7 +10,39 @@ project_api = Blueprint("project_api", __name__)
 
 @project_api.route("/list_all", methods=["GET"])
 def list_all():
+    """Get all projects.
+
+    :returns: JSON array with all available projects
+    and related metadata.
+    :statuscode 200: OK
+    :statuscode 500: Internal Server Error
+    """
     return _get_projects_for_network()
+
+
+@project_api.route("/list_mine", methods=["GET"])
+@jwt_required()
+def list_mine():
+    """Get project associated with user.
+
+    This endpoint is restricted to authenticated users.
+    A call to "get_user_by_email" may raise a "NoSuchUser"
+    exception, but this should not happen in practice.
+    If it does, it will be caught by the 500.
+
+    :param header: The request header with current token.
+    :returns: JSON array with all available projects
+    and related metadata.
+    :statuscode 200: OK
+    :statuscode 401: Unauthorized (expired token, missing header)
+    :statuscode 422: Unprocessable Content (not enough segments,
+    signature verification failed)
+    :statuscode 500: Internal Server Error
+    """
+    user_service = get_user_service()
+    email = get_jwt_identity()
+    user = user_service.get_user_by_email(email)
+    return _get_projects_for_network(user)
 
 
 def _get_projects_for_network(user=None):
@@ -21,12 +53,3 @@ def _get_projects_for_network(user=None):
             if field in project and project[field] is not None:
                 project[field] = project[field].timestamp()
     return projects
-
-
-@project_api.route("/list_mine", methods=["GET"])
-@jwt_required()
-def list_mine():
-    user_service = get_user_service()
-    email = get_jwt_identity()
-    user = user_service.get_user_by_email(email)
-    return _get_projects_for_network(user)
